# version-max

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
extras/: versionbox.maxpat
source/version/: CMakeLists.txt  version.cpp
